--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(prova01 C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(prova01 main.c Funcionarios.c Funcionarios.h)
+add_executable(prova01-aeds2 main.c Funcionarios.c Funcionarios.h)
